perf(core): sustain mixed perpetual throughput